fix(docs): update terminology from "cycle time" to "lead time" in various reports

--- a/en/core-concepts/data-sampling-and-filtering.mdx
+++ b/en/core-concepts/data-sampling-and-filtering.mdx
@@ -25,7 +25,7 @@ Lets you specify a time period for analysis using "from" and "to" fields. This h
 
 ### Select Columns
 
-Used to choose columns for calculating cycle time. In "Activity" filtering mode, this parameter also affects task filtering - only tasks that were active in the selected columns are shown.
+Used to choose columns for calculating lead time. In "Activity" filtering mode, this parameter also affects task filtering - only tasks that were active in the selected columns are shown.
 
 ### Filtering Mode
 
