--- a/en/getting-started/quick-start.mdx
+++ b/en/getting-started/quick-start.mdx
@@ -15,7 +15,7 @@ description: Guide to getting started with Jira Metrics Plugin (JMP).
 
 In the JMP interface, you'll see several types of reports:
 
-- Cycle Time
+- Lead Time
 - Throughput Chart
 - Aging Chart
 - Cumulative Flow Diagram
