--- a/en/reports/cumulative-flow-diagram-report.mdx
+++ b/en/reports/cumulative-flow-diagram-report.mdx
@@ -9,7 +9,7 @@ The Cumulative Flow Diagram (CFD) is a powerful visual tool for analyzing the fl
 
 ## Chart Structure
 
-[Image of Cumulative Flow Diagram]
+![Image of Cumulative Flow Diagram](/docs/images/cfd.png)
 
 - **X-axis**: Timeline (dates)
 - **Y-axis**: Number of tasks
@@ -28,11 +28,13 @@ The Cumulative Flow Diagram (CFD) is a powerful visual tool for analyzing the fl
 ## Interactive Elements
 
 1. **Tooltips**: When hovering over a specific point on the diagram, a tooltip appears containing:
+
    - Date
    - Number of tasks in each status
    - Total number of tasks on that date
 
 2. **Daily details**: Clicking on a specific day displays detailed information at the bottom of the page:
+
    - List of tasks divided by status
    - Task numbers are presented as clickable links leading to the corresponding task page in Jira
 
