--- a/en/reports/predictability-report.mdx
+++ b/en/reports/predictability-report.mdx
@@ -32,7 +32,7 @@ The Predictability Chart is a metric proposed by Kanban University to measure th
 
 ## Chart Structure
 
-[Image of Predictability Chart]
+![Image of Predictability Chart](/docs/images/predictability.png)
 
 The chart shows a line representing the change in the 98% / 50% ratio over time. The values on the graph reflect the degree of process predictability.
 
@@ -67,7 +67,7 @@ Below the chart are control elements:
 
 3. **Implementing improvements**: Use the data obtained to optimize processes, eliminate bottlenecks, and increase efficiency.
 
-4. **Comprehensive analysis**: Consider the Predictability Chart in combination with other metrics, such as Cycle Time and Throughput, for a full analysis.
+4. **Comprehensive analysis**: Consider the Predictability Chart in combination with other metrics, such as Lead Time and Throughput, for a full analysis.
 
 5. **Context consideration**: Take into account the specifics of the project and team when interpreting values.
 
