--- a/en/reports/throughput-chart-report.mdx
+++ b/en/reports/throughput-chart-report.mdx
@@ -9,7 +9,7 @@ The Throughput Chart is a diagram that displays the number of completed tasks ov
 
 ## Chart Structure
 
-[Image of Throughput Chart]
+![Image of Throughput Chart](/docs/images/throughput.png)
 
 - **X-axis**: Time intervals (days, weeks, or months)
 - **Y-axis**: Number of completed tasks for each interval
@@ -28,8 +28,6 @@ The following parameters are used to configure the report:
 1. **Resolution**: Choose the data grouping interval (day, week, month).
 2. **Timeframe**: Select the analysis period.
 3. **Completion Columns**: Choose columns for analysis. This is a key parameter determining which tasks will be considered completed.
-
-[Image of Throughput Chart settings panel]
 
 ## Interpreting Results
 
@@ -54,7 +52,7 @@ Unlike other reports, the Throughput Chart always uses the "Completion" mode for
 
 4. **Anomaly detection**: Sharp spikes or drops in throughput may indicate special events or problems requiring attention.
 
-5. **Correlation with other metrics**: Consider the Throughput Chart in combination with other metrics, such as Cycle Time, to get a more complete picture of process efficiency.
+5. **Correlation with other metrics**: Consider the Throughput Chart in combination with other metrics, such as Lead Time, to get a more complete picture of process efficiency.
 
 ## Conclusion
 
