--- a/ru/core-concepts/data-sampling-and-filtering.mdx
+++ b/ru/core-concepts/data-sampling-and-filtering.mdx
@@ -25,7 +25,7 @@ JMP автоматически добавляет все быстрые филь
 
 ### Select Columns
 
-Используется для выбора колонок, по которым будет рассчитываться cycle time. В режиме фильтрации "Activity" этот параметр также влияет на фильтрацию задач - отображаются только те, которые были активны в выбранных колонках.
+Используется для выбора колонок, по которым будет рассчитываться lead time. В режиме фильтрации "Activity" этот параметр также влияет на фильтрацию задач - отображаются только те, которые были активны в выбранных колонках.
 
 ### Filtering Mode
 
