--- a/ru/getting-started/quick-start.mdx
+++ b/ru/getting-started/quick-start.mdx
@@ -15,7 +15,7 @@ description: Руководство по началу работы с Jira Metri
 
 В интерфейсе JMP вы увидите несколько типов отчетов:
 
-- Cycle Time
+- Lead Time
 - Throughput Chart
 - Aging Chart
 - Cumulative Flow Diagram
