--- a/ru/reports/aging-chart-report.mdx
+++ b/ru/reports/aging-chart-report.mdx
@@ -15,12 +15,14 @@ Aging Chart (Диаграмма старения) - это визуальный 
 - **Ось Y**: Время, которое задачи накопили в выбранных колонках (в днях)
 
 Каждая задача представлена точкой на диаграмме:
+
 - Чем выше точка, тем дольше задача находится в работе.
 - Если несколько задач имеют примерно одинаковое время выполнения, они группируются в общую точку с указанием их количества.
 
 ## Интерактивные элементы
 
 При наведении курсора на точку появляется подсказка со следующей информацией:
+
 - Ссылка на задачу в Jira
 - Накопленное время в выбранных колонках
 
@@ -31,6 +33,7 @@ Aging Chart (Диаграмма старения) - это визуальный 
 Статистика рассчитывается на основе всех задач, попавших в выборку, включая исторические данные. Учитываются применяемые фильтры, выбранные даты, свимлейны и колонки.
 
 Пользователи могут выбрать способ расчета статистики:
+
 - **All columns**: Учитывается время во всех выбранных колонках.
 - **Last Column**: Учитывается время во всех выбранных колонках, кроме последней (обычно колонка "Готово").
 
@@ -41,10 +44,12 @@ Aging Chart (Диаграмма старения) - это визуальный 
 [Изображение цветового кодирования]
 
 При выборе одной процентили (например, 50%):
+
 - **Зеленый**: Задачи, накопившие времени меньше, чем 50% процентиль.
 - **Красный**: Задачи, накопившие больше времени, чем 50% процентиль.
 
 При выборе двух процентилей (например, 50% и 85%):
+
 - **Зеленый**: Задачи, накопившие времени меньше, чем 50% процентиль.
 - **Оранжевый**: Задачи между 50% и 85% процентилями.
 - **Красный**: Задачи, накопившие больше времени, чем 85% процентиль.
@@ -71,7 +76,7 @@ Aging Chart (Диаграмма старения) - это визуальный 
 
 2. **Настройка процентилей**: Экспериментируйте с различными значениями процентилей для лучшего понимания распределения задач.
 
-3. **Сочетание с другими метриками**: Используйте Aging Chart вместе с другими отчетами, такими как Cycle Time, для получения полной картины эффективности процесса.
+3. **Сочетание с другими метриками**: Используйте Aging Chart вместе с другими отчетами, такими как Lead Time, для получения полной картины эффективности процесса.
 
 4. **Фокус на аномалиях**: Уделяйте особое внимание задачам, которые значительно выбиваются из общего распределения.
 
