--- a/ru/reports/lead-time-report.mdx
+++ b/ru/reports/lead-time-report.mdx
@@ -1,20 +1,21 @@
 ---
-title: Отчет Cycle Time
-description: Подробное описание отчета Cycle Time в Jira Metrics Plugin и его интерпретация.
+title: Отчет Lead Time
+description: Подробное описание отчета Lead Time в Jira Metrics Plugin и его интерпретация.
 ---
 
 ## Обзор
 
-Отчет Cycle Time представляет собой гистограмму распределения, которая отображает время выполнения задач. Этот отчет идеально подходит для общей оценки продолжительности рабочих процессов и выявления различных типов задач.
+Отчет Lead Time представляет собой гистограмму распределения, которая отображает время выполнения задач. Этот отчет идеально подходит для общей оценки продолжительности рабочих процессов и выявления различных типов задач.
 
 ## Структура гистограммы
 
-[Изображение гистограммы Cycle Time]
+![Image of Lead Time histogram](/docs/images/leadtime.png)
 
 - **Ось X**: Время выполнения задач (в днях, неделях или месяцах)
 - **Ось Y**: Количество задач, выполненных за указанное время
 
 На графике также отмечены две ключевые линии:
+
 - **Синяя линия**: 50-й процентиль (медиана). Показывает время, за которое выполняется половина всех задач.
 - **Красная линия**: 95-й процентиль. Отмечает время, за которое выполняется подавляющее большинство задач. Задачи правее этой линии считаются "хвостами" или аномалиями и требуют отдельного анализа.
 
@@ -22,7 +23,7 @@ description: Подробное описание отчета Cycle Time в Jira
 
 При наведении курсора на столбец гистограммы появляется подсказка со следующей информацией:
 
-- **Cycle Time**: Время выполнения для данной группы задач
+- **Lead Time**: Время выполнения для данной группы задач
 - **Tasks**: Количество задач в этой группе
 - **Percentile**: Процент задач, которые выполняются за это время или быстрее
 
@@ -30,16 +31,17 @@ description: Подробное описание отчета Cycle Time в Jira
 
 ## Расчет времени выполнения
 
-Время выполнения (Cycle Time) рассчитывается как сумма времени, которое задача провела во всех выбранных колонках. Важно отметить:
+Время выполнения (Lead Time) рассчитывается как сумма времени, которое задача провела во всех выбранных колонках. Важно отметить:
 
 1. Выбор колонок в фильтре "Select Columns" определяет, какие задачи попадают в выборку и какое время учитывается при расчетах.
 2. Можно выбрать несколько колонок, не обязательно идущих последовательно на доске.
-3. Время в последней колонке на доске (обычно "Готово") не учитывается в общем Cycle Time.
+3. Время в последней колонке на доске (обычно "Готово") не учитывается в общем Lead Time.
 4. В отчете учитываются все задачи за выбранный период, независимо от их статуса (закрыты или нет).
 
 ## Влияние режима фильтрации
 
 Режим фильтрации ("Activity" или "Columns") влияет на набор отображаемых задач:
+
 - **Activity**: Учитываются все задачи, активные в выбранных колонках за указанный период.
 - **Columns**: Фокус на задачах, прошедших через указанные колонки завершения (Completion Columns).
 
@@ -49,7 +51,7 @@ description: Подробное описание отчета Cycle Time в Jira
 
 Под гистограммой располагается таблица со статистическими показателями:
 
-[Изображение таблицы статистики]
+![Image of statistics table](/docs/images/leadtime-statistic.png)
 
 - **Total Tasks**: Общее количество задач в выборке
 - **Mean Time**: Среднее время выполнения задач
@@ -57,16 +59,17 @@ description: Подробное описание отчета Cycle Time в Jira
 
 ## Табличное представление данных
 
-Опция "Show Reports as Table" позволяет отобразить все задачи в виде таблицы, где каждая строка соответствует столбцу гистограммы. Таблица сортируется по Cycle Time от наибольшего к наименьшему, что удобно для анализа задач с самым длительным временем выполнения.
+Опция "Show Reports as Table" позволяет отобразить все задачи в виде таблицы, где каждая строка соответствует столбцу гистограммы. Таблица сортируется по Lead Time от наибольшего к наименьшему, что удобно для анализа задач с самым длительным временем выполнения.
 
 ## Рекомендации по использованию
 
 1. Используйте быстрые фильтры для более точного анализа. Например:
+
    - Для анализа только закрытых задач: `Resolution != Unresolved`
    - Для анализа задач за конкретный период: `Resolved >= $Start_date AND Resolved < $End_date`
 
 2. Обратите внимание на задачи, попадающие в "хвост" распределения (после 95-го процентиля). Они могут указывать на проблемы в процессе или требовать особого внимания.
 
-3. Регулярно анализируйте изменения в распределении Cycle Time для отслеживания эффективности внедряемых улучшений.
+3. Регулярно анализируйте изменения в распределении Lead Time для отслеживания эффективности внедряемых улучшений.
 
 4. Используйте табличное представление при подготовке к ревью процессов поставки, фокусируясь на задачах с наибольшим временем выполнения.
