--- a/ru/reports/aging-chart-report.mdx
+++ b/ru/reports/aging-chart-report.mdx
@@ -5,76 +5,247 @@ description: Подробное описание отчета Aging Chart в Jir
 
 ## Обзор
 
-Aging Chart (Диаграмма старения) - это визуальный инструмент для анализа времени выполнения задач, которые в данный момент находятся в процессе работы. Этот отчет помогает быстро оценить распределение задач по времени и выявить потенциальные проблемы или узкие места в процессе поставки.
+Aging Chart (Диаграмма старения) - это один из ключевых инструментов управления потоком в Канбан методе, разработанный для визуализации времени нахождения задач в работе.
 
-## Структура диаграммы
+Диаграмма старения показывает, как долго элементы работы находятся в системе, и является критически важным инструментом для выявления заблокированных элементов и управления рисками доставки.
 
-[Изображение Aging Chart]
+Диаграмма помогает командам:
 
-- **Ось X**: Колонки доски Jira
-- **Ось Y**: Время, которое задачи накопили в выбранных колонках (в днях)
+- **Выявлять риски** невыполнения обязательств по срокам
+- **Находить заблокированные задачи** до того, как они станут критическими
+- **Управлять ожиданиями** стейкхолдеров на основе данных
+- **Принимать решения** о приоритизации и эскалации
 
-Каждая задача представлена точкой на диаграмме:
-- Чем выше точка, тем дольше задача находится в работе.
-- Если несколько задач имеют примерно одинаковое время выполнения, они группируются в общую точку с указанием их количества.
+**Ключевой принцип**: Диаграмма показывает текущие задачи в работе на фоне исторической статистики, позволяя понять, какие задачи выполняются в обычном темпе, а какие требуют внимания.
+
+## Принцип работы диаграммы
+
+Aging Chart строится на основе двух типов данных, которые обеспечивают полную картину происходящего:
+
+### 1. Текущие задачи в работе
+
+Это все задачи, которые сейчас находятся в процессе выполнения на вашей доске. Именно эти задачи отображаются как точки на диаграмме. Каждая точка показывает, сколько дней задача уже находится в работе.
+
+### 2. Историческая статистика для сравнения
+
+Чтобы понимать, является ли текущая скорость работы нормальной или есть проблемы, диаграмма использует статистику по ранее завершенным задачам. Эта статистика создает **цветовые зоны** и **горизонтальные линии-ориентиры** на диаграмме.
+
+**Как настроить исторические данные:**
+Историческая статистика автоматически рассчитывается на основе:
+
+- **Выбранного периода времени** (например, последние 3 месяца)
+- **Примененных фильтров** (проекты, типы задач, команды)
+- **Выбранных колонок** workflow
+
+Изменяя эти настройки через фильтры, вы можете сравнивать текущую работу с разными периодами или условиями из прошлого, получая более точное понимание производительности.
+
+## Как читать диаграмму
+
+### Оси диаграммы
+
+- **Горизонтальная ось (X)**: Колонки вашего рабочего процесса в Jira
+- **Вертикальная ось (Y)**: Время выполнения задач в днях
+
+### Задачи на диаграмме
+
+Каждая задача, находящаяся сейчас в работе, показана **зеленой точкой**:
+
+- **Чем выше точка** — тем дольше задача находится в работе
+- **Цифра на точке** — показывает количество задач, если несколько задач имеют одинаковое время
+- **Клик по точке** — открывает подробную информацию о задачах
+
+Визуализация времени нахождения элементов в системе критически важна для понимания предсказуемости доставки и выявления аномалий в процессе.
 
 ## Интерактивные элементы
 
-При наведении курсора на точку появляется подсказка со следующей информацией:
-- Ссылка на задачу в Jira
-- Накопленное время в выбранных колонках
+### Информация в подсказке
 
-[Изображение подсказки при наведении]
+При наведении курсора на точку отображается подсказка с:
 
-## Расчет статистики (процентилей)
+- Ключ(и) задач (кликабельные ссылки)
+- Накопленное время для каждой задачи в днях
+- Несколько сгруппированных задач перечисляются отдельно
 
-Статистика рассчитывается на основе всех задач, попавших в выборку, включая исторические данные. Учитываются применяемые фильтры, выбранные даты, свимлейны и колонки.
+### Диалог истории задачи
 
-Пользователи могут выбрать способ расчета статистики:
-- **All columns**: Учитывается время во всех выбранных колонках.
-- **Last Column**: Учитывается время во всех выбранных колонках, кроме последней (обычно колонка "Готово").
+Клик по ключу задачи в подсказке открывает подробный диалог истории задачи, показывающий путь задачи через колонки workflow.
 
-## Цветовое кодирование
+## Настройки диаграммы
 
-На основе рассчитанных процентилей настраивается цветовое кодирование задач:
+### Выбор линий-ориентиров
 
-[Изображение цветового кодирования]
+Вы можете настроить, какие исторические ориентиры показывать на диаграмме:
 
-При выборе одной процентили (например, 50%):
-- **Зеленый**: Задачи, накопившие времени меньше, чем 50% процентиль.
-- **Красный**: Задачи, накопившие больше времени, чем 50% процентиль.
+- **Доступные варианты**: 30%, 50%, 70%, 85%, 95%
+- **Можно выбрать несколько** линий одновременно или только те, которые важны для вашей команды
+- **По умолчанию** показываются все пять линий
 
-При выборе двух процентилей (например, 50% и 85%):
-- **Зеленый**: Задачи, накопившие времени меньше, чем 50% процентиль.
-- **Оранжевый**: Задачи между 50% и 85% процентилями.
-- **Красный**: Задачи, накопившие больше времени, чем 85% процентиль.
+## Цветовые зоны и линии-ориентиры
 
-Важно отметить, что высота цветных блоков различается для каждой колонки. Это связано с тем, что процентили рассчитываются отдельно для каждой колонки, учитывая накопленное время в предыдущих колонках.
+Диаграмма показывает **цветные полосы** и **горизонтальные линии**, которые помогают понять, как идут дела с текущими задачами:
 
-## Дополнительные возможности
+### Что означают цветные зоны
 
-- **Show calculation details**: Позволяет увидеть сырые данные, на основе которых производился расчет.
+Цветовые зоны рассчитываются **отдельно для каждой колонки** на основе накопленного времени задач в этой колонке из исторических данных:
 
-## Интерпретация результатов
+- **Зеленые зоны** (светлые оттенки) — задачи выполняются быстрее обычного для данной колонки ✅
+- **Желто-оранжевые зоны** — задачи выполняются в обычном темпе для данной колонки ⚠️
+- **Красные зоны** — задачи выполняются медленнее обычного для данной колонки, требуют внимания 🚨
 
-1. **Выявление аномалий**: Задачи, находящиеся значительно выше остальных, могут требовать особого внимания.
+**Особенность расчета**: В каждой колонке учитывается **накопленное время** — то есть общее время, которое задача провела от начала процесса до текущей колонки. Поэтому цветовые зоны становятся "выше" в последующих колонках, отражая естественное увеличение общего времени выполнения.
 
-2. **Анализ распределения**: Оцените, как распределены задачи по времени в различных колонках. Это может указать на узкие места в процессе.
+### Процентильные линии
 
-3. **Раннее обнаружение проблем**: Обратите внимание на задачи, которые находятся в красной зоне уже в начальных колонках. Это может сигнализировать о потенциальных проблемах на ранних этапах.
+Горизонтальные линии показывают исторические ориентиры:
 
-4. **Оценка эффективности процесса**: Большое количество задач в верхней части диаграммы может указывать на необходимость оптимизации процесса.
+- **30%, 50%, 70%, 85%, 95%** — это статистические отметки из прошлого опыта
+- Если задача находится **выше линии 85%** — она выполняется медленнее, чем 85% аналогичных задач в прошлом
+- Если задача **ниже линии 50%** — она выполняется быстрее половины аналогичных задач
 
-## Рекомендации по использованию
+Важно понимать: процентили в диаграмме старения — это не план, а индикатор риска. Они помогают команде понять, когда стоит обратить внимание на задачу и принять меры.
 
-1. **Регулярный мониторинг**: Используйте Aging Chart для ежедневного или еженедельного обзора текущего состояния задач.
+**Важно помнить**: Цвета и линии могут отличаться для разных колонок, потому что статистика рассчитывается отдельно для каждого этапа работы.
 
-2. **Настройка процентилей**: Экспериментируйте с различными значениями процентилей для лучшего понимания распределения задач.
+## Доступные фильтры
 
-3. **Сочетание с другими метриками**: Используйте Aging Chart вместе с другими отчетами, такими как Cycle Time, для получения полной картины эффективности процесса.
+Aging Chart включает комплексные опции фильтрации:
 
-4. **Фокус на аномалиях**: Уделяйте особое внимание задачам, которые значительно выбиваются из общего распределения.
+### Влияние фильтров на диаграмму
+
+Все фильтры в Aging Chart выполняют две важные функции:
+
+1. **Управляют scope для расчета статистики** — определяют, какие исторические задачи использовать для построения процентилей и цветовых зон
+2. **Фильтруют отображаемые текущие задачи** — какие WIP задачи показывать как точки на диаграмме
+
+### Основные фильтры:
+
+- **Временные рамки**: Период для расчета исторической статистики (например, последние 3 месяца)
+- **Быстрые фильтры**: Предварительно настроенные фильтры доски
+- **Swimlanes**: Фильтрация по конкретным swimlanes
+- **Selected Columns**: Определяет колонки workflow, которые:
+  - Отображаются на диаграмме (ось X)
+  - Участвуют в расчете накопленного времени
+  - Используются для построения статистики
+- **Режим фильтрации**: Критерии для определения завершенных задач
+
+**Важно**: Изменение любого фильтра пересчитывает всю статистику и может значительно изменить цветовые зоны и процентильные линии.
+
+## Что говорит диаграмма о вашей работе
+
+### 1. Выявление проблем и рисков
+
+**Смотрите на задачи в красных зонах** — это задачи, которые выполняются медленнее 95% аналогичных задач из прошлого. Элементы в верхней части диаграммы старения представляют наибольший риск для репутации команды и удовлетворенности клиентов.
+
+**Обратите внимание на скопления задач** в одной колонке — это может означать:
+
+- Узкое место в процессе
+- Нехватку людей или навыков на этом этапе
+- Технические проблемы или зависимости
+
+**Задачи выше 85-й линии** уже требуют внимания, не ждите, пока они попадут в красную зону.
+
+### 2. Понимание общего состояния процесса
+
+**Здоровый процесс выглядит так:**
+
+- Задачи равномерно распределены по колонкам
+- Большинство точек находится в зеленых и желтых зонах
+- Мало задач в красных зонах
+
+**Проблемный процесс:**
+
+- Много задач скопилось в одной-двух колонках
+- Много красных точек (особенно в начальных колонках)
+- Общий "подъем" всех задач вверх по диаграмме
+
+### 3. Предупреждение о будущих проблемах
+
+Диаграмма старения работает как радар раннего предупреждения. Проблемы, которые вы видите сегодня в начальных колонках, станут большими проблемами завтра в финальных колонках.
+
+**На что обращать внимание:**
+
+- **Задачи в красной зоне в начальных колонках** — они точно вызовут проблемы позже
+- **Растущее количество задач выше 85-й линии** — тренд к ухудшению
+- **Повторяющиеся паттерны** — одни и те же проблемы каждую неделю
+
+### 4. Принятие решений на основе данных
+
+**Вопросы, на которые отвечает диаграмма:**
+
+- Сколько работы мы можем взять в работу одновременно?
+- В какой колонке у нас регулярно возникают проблемы?
+- Помогают ли наши улучшения процесса?
+- Какие задачи нужно эскалировать прямо сейчас?
+
+**Практические решения:**
+
+- **Снизить лимиты WIP** если много задач в красных зонах
+- **Добавить ресурсы** в колонки с постоянными проблемами
+- **Изменить процесс** для колонок, где задачи регулярно "стареют"
+
+## Как использовать диаграмму в работе
+
+### 1. Ежедневные стендапы
+
+**Начинайте встречу с Aging Chart:**
+
+- Покажите задачи в красных зонах — обсудите, что делать
+- Задачи выше 85-й линии — кому нужна помощь?
+- Новые задачи в желтых зонах — следить
+
+Рекомендуется использовать диаграмму старения как основу для ежедневных разговоров о том, что блокирует поток.
+
+### 2. Настройка процентилей
+
+Выбор процентилей зависит от потребностей команды:
+
+- **Простой анализ**: линии 50% и 85%
+- **Детальный анализ**: все пять линий (30%, 50%, 70%, 85%, 95%)
+- **Исторический период**: настраивайте под циклы планирования команды
+
+### 3. Связь с другими отчетами
+
+**Используйте вместе для полной картины:**
+
+- **CFD (Cumulative Flow)** — показывает накопление задач, Aging Chart — что с ними делать
+- **Cycle Time** — показывает, сколько обычно занимают завершенные задачи
+- **Throughput** — сколько задач завершаем, Aging Chart — не берем ли слишком много в работу
+
+### 4. Конкретные действия
+
+**Что делать с красными задачами:**
+
+1. Кликните по точке → откройте задачи в Jira
+2. Разберитесь, что их блокирует
+3. Назначьте ответственного за разблокировку
+4. Установите дедлайн для решения проблемы
+
+**Улучшение процесса:**
+
+- Если проблемы повторяются в одной колонке — меняйте процесс в этой колонке
+- Если много красных задач — снижайте лимиты WIP
+
+## Практические рекомендации
+
+### Основные принципы использования
+
+- Фокусируйтесь на задачах в красных зонах как индикаторах рисков
+- Ищите системные причины проблем
+- Используйте диаграмму для выявления трендов, а не разовых оценок
+- Регулярно пересматривайте настройки процентилей под потребности команды
+
+### Качество данных
+
+Диаграмма старения хороша настолько, насколько хороши ваши данные. Убедитесь, что колонки отражают реальные этапы работы, а не формальные статусы.
+
+**Проверьте:**
+
+- Все ли важные этапы работы представлены колонками?
+- Переводят ли задачи в следующую колонку сразу, как начинают работать?
+- Соответствуют ли фильтры вашему реальному scope работы?
 
 ## Заключение
 
-Aging Chart - мощный инструмент для визуализации текущего состояния задач и выявления потенциальных проблем в процессе работы. Правильное использование этого отчета поможет вам оперативно реагировать на отклонения и поддерживать эффективность вашего рабочего процесса.
+Aging Chart — это не просто красивая картинка, а практический инструмент управления рисками доставки. Практика показывает, что команды, которые регулярно используют диаграмму старения, значительно чаще выполняют свои обязательства в срок.
+
+Начните с простого: покажите диаграмму команде, обсуждайте красные задачи на стендапах, принимайте решения на основе данных. Постепенно вы научитесь видеть проблемы до того, как они станут критическими, и ваши клиенты будут получать результаты быстрее и предсказуемее.
