docs: improve aging chart report with additional details and clearer language

--- a/en/reports/aging-chart-report.mdx
+++ b/en/reports/aging-chart-report.mdx
@@ -9,6 +9,8 @@ The Aging Chart is one of the key flow management tools in the Kanban method, de
 
 The aging chart shows how long work items remain in the system and is a critically important tool for identifying blocked items and managing delivery risks.
 
+![Aging Chart Diagram](/docs/images/aging-chart.png)
+
 The chart helps teams:
 
 - **Identify risks** of not meeting deadline commitments
@@ -177,23 +179,23 @@ The aging chart works as an early warning radar. Problems you see today in initi
 - Are our process improvements helping?
 - Which tasks need escalation right now?
 
-**Practical solutions:**
+**Possible approaches to problem solving:**
 
-- **Reduce WIP limits** if many tasks are in red zones
-- **Add resources** to columns with persistent problems
-- **Change process** for columns where tasks regularly "age"
+- **When there are too many tasks in red zones** some teams reconsider WIP limits
+- **For persistent problems in specific columns** consider resource reallocation or process adjustments
+- **When tasks regularly "age" in certain columns** it's worth analyzing and possibly adapting the workflow
 
 ## How to Use the Chart in Work
 
-### 1. Daily Standups
+### 1. Daily Standups Usage Options
 
-**Start meetings with Aging Chart:**
+**Aging Chart can be useful for structuring discussions:**
 
-- Show tasks in red zones — discuss what to do
-- Tasks above 85th line — who needs help?
-- New tasks in yellow zones — monitor
+- Teams often start by reviewing tasks in red zones to identify priorities
+- Tasks above the 85th line may signal the need for additional support
+- New tasks in yellow zones are worth noting for monitoring
 
-It's recommended to use the aging chart as a foundation for daily conversations about what blocks the flow.
+Many teams find it helpful to use the aging chart as a starting point for conversations about flow blockers.
 
 ### 2. Percentile Configuration
 
@@ -208,22 +210,26 @@ Percentile selection depends on team needs:
 **Use together for complete picture:**
 
 - **CFD (Cumulative Flow)** — shows task accumulation, Aging Chart — what to do with them
-- **Cycle Time** — shows how long completed tasks usually take
+- **Lead Time** — shows how long completed tasks usually take
 - **Throughput** — how many tasks we complete, Aging Chart — are we taking too much work
 
-### 4. Specific Actions
+### 4. Examples of Working with Problematic Tasks
 
-**What to do with red tasks:**
+**Approaches to working with tasks in red zones:**
 
-1. Click on dot → open tasks in Jira
-2. Understand what blocks them
-3. Assign someone responsible for unblocking
-4. Set deadline for problem resolution
+Teams use different strategies for working with problematic tasks:
 
-**Process improvement:**
+1. Analyzing tasks by clicking on dots to open in Jira
+2. Identifying blockers and dependencies that hinder progress
+3. Assigning responsible parties for resolving identified issues
+4. Setting timeframes for unblocking
 
-- If problems repeat in one column — change process in that column
-- If many red tasks — reduce WIP limits
+**Process improvement options:**
+
+- When problems recur in one column, consider analyzing processes at that stage
+- When red tasks appear frequently, teams may consider adjusting WIP limits
+
+The specific approach depends on team culture and workflow characteristics.
 
 ## Practical Recommendations
 
@@ -248,4 +254,4 @@ The aging chart is only as good as your data. Ensure columns reflect real work s
 
 The Aging Chart is not just a pretty picture, but a practical tool for managing delivery risks. Practice shows that teams regularly using the aging chart significantly more often meet their commitments on time.
 
-Start simple: show the chart to your team, discuss red tasks at standups, make data-driven decisions. Gradually you'll learn to see problems before they become critical, and your customers will receive results faster and more predictably.
+You can start with simple steps: introduce your team to the chart, try discussing problematic tasks at standups, strive to make data-driven decisions. Gradually teams learn to notice problems before they become critical, helping customers receive results more predictably and on time.
